# webull-openapi-thai-lab

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/requirements/: sec-webull-live-smoke.txt
.github/workflows/: ci.yml  quantopian-style-results.yml  sec-webull-live-smoke.yml
docs/: 00-learning-path-th.md  01-api-key-setup-th.md  02-first-call-th.md  03-market-data-th.md  04-order-preview-and-guardrails-th.md  05-ai-assisted-webull-dev-th.md  06-sec-webull-financials-th.md  99-publishing-github-th.md
examples/: 01_account_list.py  02_market_data_snapshot.py  03_order_preview.py
notebooks/: 00_auth_token.ipynb  01_stock_market_data.ipynb  02_screener_fundamentals.ipynb  03_watchlist_readonly.ipynb  04_account_assets_order_query.ipynb  05_order_preview_guardrails.ipynb  README.md  sec_webull_financials_beginner.ipynb  webull_th_beginner.ipynb
notebooks/quantopian_style/: 01_research_environment.ipynb  02_plotting_returns.ipynb  03_autocorrelation_ar.ipynb  04_regression_beta.ipynb  05_pairs_trading.ipynb  06_factor_ranking.ipynb  07_portfolio_var_cvar.ipynb  08_liquidity_slippage.ipynb  09_overfitting_guardrails.ipynb  README.md
scripts/: build_endpoint_notebooks.py  build_quantopian_style_dashboard.py  build_quantopian_style_notebooks.py  build_sec_webull_financials_notebook.py  build_webull_th_beginner_notebook.py  run_quantopian_style_workflow.py
tests/: test_account.py  test_cli.py  test_clients.py  test_company_pipeline.py  test_config.py  test_docs_links.py  test_endpoint_notebooks.py  test_exports.py  test_financials.py  test_market_data.py  test_metrics.py  test_orders.py  test_quantopian_style_notebooks.py  test_quantopian_style_workflow.py  test_repository_contract.py  test_sec_client.py  test_sec_config.py  test_sec_webull_financials_notebook.py  test_tutorial_visual_assets.py  test_webull_th_beginner_notebook.py
(+22 files in other folders)
