[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webull-openapi-thai-lab"
version = "0.1.0"
description = "Thai tutorial repo for safe Webull OpenAPI learning with Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nuthdanai Wangpratham" }]
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=16.1.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "rich>=13.7.1",
    "typer>=0.12.3",
    "webull-openapi-python-sdk>=2.0.12",
]

[project.optional-dependencies]
dev = [
    "plotly>=5.22.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[project.scripts]
webull-lab = "webull_lab.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
